Add LibraryRecord generation